tests/rustdoc-ui/intra-doc/bad-intra-doc.stderr
error: unresolved link to `example.com`
  --> $DIR/bad-intra-doc.rs:6:29
   |
LL | /// this is not a link to [`example.com`]
   |                             ^^^^^^^^^^^ no item named `example.com` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
note: the lint level is defined here
  --> $DIR/bad-intra-doc.rs:2:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unresolved link to `Foo.bar`
  --> $DIR/bad-intra-doc.rs:10:33
   |
LL | /// attempted link to method: [`Foo.bar()`]
   |                                 ^^^^^^^^^ no item named `Foo.bar` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `Bar`
  --> $DIR/bad-intra-doc.rs:12:38
   |
LL | /// classic broken intra-doc link: [`Bar`]
   |                                      ^^^ no item named `Bar` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: aborting due to 3 previous errors

